Fix Customer menu item for retailer logins and hide MS scrollbars

--- a/app/assets/stylesheets/shoppe/application.scss
+++ b/app/assets/stylesheets/shoppe/application.scss
@@ -44,6 +44,7 @@ nav.sidebar {
 	ul {
         height: calc(100% - 160px);
         overflow-y: scroll;
+        -ms-overflow-style: none;
 
 		li {
 			span.pending { float:right; font-size:0.9em;  font-weight:bold;background:#5B6270; color:#fff; padding:2px 10px; border-radius:16px; margin-top:9px; margin-right:10px;}
